# cdss

./: .env.example  .gitignore  ARCHITECTURE.md  CDSS_Pipeline_Colab.ipynb  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/: .registry
app/: chat_bridge.py  main.py  runner_bridge.py
app/components/: agent_trace.py  disclaimer.py  feedback.py  report_view.py  suggestions.py  thinking_trace.py  trace_labels.py
app/state/: session.py
cdss/agents/: base.py  factory.py  registry.py
cdss/config/: settings.py  sources.yaml
cdss/core/: enums.py  exceptions.py
cdss/integrations/: clinical_trials.py
cdss/llm/: client.py  json_utils.py  model_selector.py
cdss/observability/: event_bus.py  events.py  run_context.py  trace_store.py
cdss/pipeline/: nodes.py  runner.py  state.py  workflow.py
cdss/sources/: registry.py
scripts/: check_comment_length.py  check_file_size.py  check_import_direction.py  run.sh  setup.sh
specs/001-cdss-multi-agent-pipeline/: context.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-chat-ui-layout/: context.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-router-trial-deep-read/: context.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+79 files in other folders)
